--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,18 @@ branches:
   only:
   - master
 
-cache:
-  directories:
-    - node_modules
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
+  - export PATH="$HOME/.yarn/bin:$PATH"
+
+cache: yarn
 
 install:
-  - npm install -g yarn parcel-bundler
+  - yarn global add parcel-bundler
 
 script:
   - yarn build
+
 deploy:
   provider: pages
   skip_cleanup: true
