--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "Jun Kato <i@junkato.jp>",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build --out-dir docs index.html"
+    "build": "parcel build --out-dir docs --public-url ./typesquare-example/ index.html"
   }
 }
