--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "parcel build --public-url ./ index.html"
+  },
+  "devDependencies": {
+    "typescript": "^3.3.3"
   }
 }
